third_party/move/move-compiler-v2/tests/checking-lang-v2.2/access_specifiers/access_not_supported.exp

Diagnostics:
error: not supported before language version `2.3-unstable`: read/write access specifiers.
   ┌─ tests/checking-lang-v2.2/access_specifiers/access_not_supported.move:11:20
   │
11 │     fun f2() reads S {
   │                    ^^

error: not supported before language version `2.3-unstable`: read/write access specifiers.
   ┌─ tests/checking-lang-v2.2/access_specifiers/access_not_supported.move:14:21
   │
14 │     fun f3() writes S {
   │                     ^^

error: only simple resource names can be used with `acquires`
   ┌─ tests/checking-lang-v2.2/access_specifiers/access_not_supported.move:17:23
   │
17 │     fun f4() acquires S(*) {
   │                       ^^^^

error: not supported before language version `2.3-unstable`: read/write access specifiers.
   ┌─ tests/checking-lang-v2.2/access_specifiers/access_not_supported.move:20:39
   │
20 │     fun f_multiple() acquires R reads R writes T, S reads G<u64> {
   │                                       ^^

error: not supported before language version `2.3-unstable`: read/write access specifiers.
   ┌─ tests/checking-lang-v2.2/access_specifiers/access_not_supported.move:20:48
   │
20 │     fun f_multiple() acquires R reads R writes T, S reads G<u64> {
   │                                                ^

error: not supported before language version `2.3-unstable`: read/write access specifiers.
   ┌─ tests/checking-lang-v2.2/access_specifiers/access_not_supported.move:20:51
   │
20 │     fun f_multiple() acquires R reads R writes T, S reads G<u64> {
   │                                                   ^^

error: not supported before language version `2.3-unstable`: read/write access specifiers.
   ┌─ tests/checking-lang-v2.2/access_specifiers/access_not_supported.move:20:59
   │
20 │     fun f_multiple() acquires R reads R writes T, S reads G<u64> {
   │                                                           ^^^^^^^

error: only simple resource names can be used with `acquires`
   ┌─ tests/checking-lang-v2.2/access_specifiers/access_not_supported.move:29:23
   │
29 │     fun f7() acquires *(*) {
   │                       ^^^^

error: only simple resource names can be used with `acquires`
   ┌─ tests/checking-lang-v2.2/access_specifiers/access_not_supported.move:32:23
   │
32 │     fun f8() acquires *(0x42) {
   │                       ^^^^^^^

error: only simple resource names can be used with `acquires`
   ┌─ tests/checking-lang-v2.2/access_specifiers/access_not_supported.move:35:33
   │
35 │     fun f9(a: address) acquires *(a) {
   │                                 ^^^^

error: only simple resource names can be used with `acquires`
   ┌─ tests/checking-lang-v2.2/access_specifiers/access_not_supported.move:38:30
   │
38 │     fun f10(x: u64) acquires *(make_up_address(x)) {
   │                              ^^^^^^^^^^^^^^^^^^^^^

error: not supported before language version `2.3-unstable`: read/write access specifiers.
   ┌─ tests/checking-lang-v2.2/access_specifiers/access_not_supported.move:45:22
   │
45 │     fun f11() !reads *(0x42), *(0x43) {
   │                      ^^^^^^^

error: not supported before language version `2.3-unstable`: read/write access specifiers.
   ┌─ tests/checking-lang-v2.2/access_specifiers/access_not_supported.move:45:31
   │
45 │     fun f11() !reads *(0x42), *(0x43) {
   │                               ^^^^^^^
